--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url= jdbc:mysql://localhost:3306/aplicaoRecycle
-spring.datasource.username=root
-spring.datasource.password=root
-spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url= jdbc:mysql://localhost:3306/aplicaoRecycle
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.jpa.hibernate.ddl-auto=update
 
 #spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 #spring.datasource.url=jdbc:mysql://localhost:3306/aplicaoRecycle?useSSL=true
@@ -26,3 +26,11 @@ spring.jpa.hibernate.ddl-auto=update
 # Configura??o para mostrar o SQL no console
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
+
+
+spring.datasource.username=${USER}
+spring.datasource.password=${PASSWORD}
+spring.datasource.url=jdbc:${DATABASE_URL}
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show_sql=true
+spring.jpa.hibernate.ddl-auto=update
